--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Zilly's Restaurant</title>
+  <title>HIFP Restaurant</title>
 
   <style>
     body {
@@ -182,4 +182,5 @@
   </footer>
 
 </body>
+
 </html>
